k8s/ingress/ingress.yaml
# Source: https://learnk8s.io/troubleshooting-deployments
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress-routing
  labels:
    name: cluster-ingress-routing
    # These are additional configuration options for the Ingress object that will be created 
  annotations:
    # Here we declare that we want to use the Nginx Community project 
    kubernetes.io/ingress.class: "nginx"
    # After matching the request we remove the '/route' part
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
        - path: "/user" 
          pathType: Prefix
          backend:
            service:
              name: wpmt-clusterip-user
              port: 
                number: 6900
        - path: "/auth"
          pathType: Prefix
          backend: 
            service:
              name: wpmt-clusterip-auth
              port:
                number: 6901
        - path: "/log"
          pathType: Prefix
          backend: 
            service:
              name: wpmt-clusterip-log
              port:
                number: 6901
